syntax = "proto3";

package bookmarks;

service BookmarksService {
    rpc createBookmark (Bookmark) returns (createBookmarkResponse);
    rpc FindAllBookmarks (Empty) returns (FindAllBookmarksResponse);
}

message Empty {}

message Bookmark {
    int32 articleId = 1;
}

message createBookmarkResponse {
    bool bookmarked = 1;
}

message FindAllBookmarksResponse {
    repeated Bookmark bookmarks = 1;
}
